--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PanGiTech - Coming Soon</title>
     <style>
         body {
-            background-color: #f7f9fc;
+            background-color: #000000;
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 50px;
