--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PanGiTech - Coming Soon</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #ff;
-            font-family: Arial, sans-serif;
+            background-color: #ffffff;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
             padding: 50px;
             color: #222;
         }
         img {
-            max-width: 300px;
+            max-width: 500px;
             height: auto;
         }
         h1 {
-            font-size: 2.5em;
-            margin-top: 30px;
+            font-size: 2.8em;
+            margin-top: 40px;
+            font-weight: 600;
         }
         p {
             font-size: 1.2em;
-            margin-top: 10px;
+            margin-top: 20px;
         }
         a {
             color: #007bff;
@@ -34,7 +36,7 @@
     </style>
 </head>
 <body>
-    <img src="Logo_PanGiTech.png" alt="PanGiTech Logo">
+    <img src="Logo_PanGiTech.png" alt="PanGiTech Logo" />
     <h1>Presto online</h1>
     <p>Contattaci: <a href="mailto:info@pangitech.it">info@pangitech.it</a></p>
 </body>
