--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
             color: #222;
         }
         img {
-            max-width: 500px;
-            height: auto;
+            img {
+			display: block;
+			margin: 0 auto;
+			max-width: 500px;
+			height: auto;
+		}
         }
         h1 {
             font-size: 2.8em;
