--- a/index.html
+++ b/index.html
@@ -6,31 +6,37 @@
     <title>PanGiTech - Coming Soon</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
+        * {
+            box-sizing: border-box;
+        }
         body {
-	    display: flex;
-	    flex-direction: column;
-	    justify-content: center;
-	    align-items: center;
-	    min-height: 100vh;
-	    padding: 20px;
-	    box-sizing: border-box;
-	}
+            margin: 0;
+            padding: 20px;
+            background-color: #ffffff;
+            font-family: 'Poppins', sans-serif;
+            color: #222;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            text-align: center;
+        }
         img {
-	    max-width: 90%;
-	    width: 500px;
-	    height: auto;
-	    display: block;
-	    margin: 0 auto;
-	}
-
+            max-width: 90%;
+            width: 500px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
         h1 {
-            font-size: 2.8em;
-            margin-top: 40px;
+            font-size: 2.4em;
+            margin-top: 30px;
             font-weight: 600;
         }
         p {
-            font-size: 1.2em;
-            margin-top: 20px;
+            font-size: 1.1em;
+            margin-top: 15px;
         }
         a {
             color: #007bff;
@@ -41,4 +47,9 @@
         }
     </style>
 </head>
+<body>
+    <img src="Logo_PanGiTech.png" alt="PanGiTech Logo" />
+    <h1>Presto online</h1>
+    <p>Contattaci: <a href="mailto:info@pangitech.it">info@pangitech.it</a></p>
+</body>
 </html>
