--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-						<img src="img/logo_pangitech.png" alt="PanGiTech Logo" class="hero-logo">
+						<img src="img/Logo_PanGiTech.png" alt="PanGiTech Logo" class="hero-logo">
                         <!-- <h1 class="text-white font-weight-bold">PanGiTech</h1> -->
                         <hr class="divider" />
                     </div>
